[gd_scene load_steps=5 format=3 uid="uid://bnfhcx8ia5jqy"]

[ext_resource type="Script" path="res://scene_prefabs/menus_and_guis/spellcraft_class_selector.gd" id="1_jf23b"]
[ext_resource type="Texture2D" uid="uid://rvreceorq8gv" path="res://assets/sprites/menus_and_gui/overworld_hud_imgs/spell_slots/icons/spell_slot_icon.png" id="2_2wx5m"]
[ext_resource type="Texture2D" uid="uid://fcsp26ow5825" path="res://assets/sprites/menus_and_gui/spellcraft_menu_imgs/class_selector_cursor.png" id="3_21155"]

[sub_resource type="GDScript" id="GDScript_5x6df"]
script/source = "# This exists so that the cursor collision detection in
# spellcraft_school_selection can function. 
# Don't get rid of it or empty its contents.

extends TextureRect


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
@warning_ignore(\"unused_parameter\")
func _process(delta: float) -> void:
	pass
"

[node name="SpellcraftSchoolSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jf23b")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="telumancy_button" type="TextureButton" parent="HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.533333, 0, 0.533333, 0.686275)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_2wx5m")
stretch_mode = 0

[node name="telumancy_label" type="Label" parent="HBoxContainer/telumancy_button"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -24.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
text = "TELUMANCY
(WEAPON SPELLS)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="motomancy_button" type="TextureButton" parent="HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0, 0.533333, 0.533333, 0.686275)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_2wx5m")
stretch_mode = 0

[node name="motomancy_label" type="Label" parent="HBoxContainer/motomancy_button"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -24.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
text = "MOTOMANCY
(MOBILITY SPELLS)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="instrumancy_button" type="TextureButton" parent="HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.533333, 0.533333, 0, 0.686275)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_2wx5m")
stretch_mode = 0

[node name="instrumancy_label" type="Label" parent="HBoxContainer/instrumancy_button"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -24.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
text = "INSTRUMANCY
(UTILITY SPELLS)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="class_selection_cursor" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_21155")
script = SubResource("GDScript_5x6df")

[connection signal="mouse_entered" from="HBoxContainer/telumancy_button" to="." method="_on_telumancy_button_mouse_entered"]
[connection signal="mouse_entered" from="HBoxContainer/motomancy_button" to="." method="_on_motomancy_button_mouse_entered"]
[connection signal="mouse_entered" from="HBoxContainer/instrumancy_button" to="." method="_on_instrumancy_button_mouse_entered"]
